third_party/blink/renderer/core/workers/worklet_pending_tasks.cc
@@ -7,14 +7,20 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "third_party/blink/renderer/core/dom/dom_exception.h"
 #include "third_party/blink/renderer/core/dom/exception_code.h"
+#include "third_party/blink/renderer/core/workers/worklet.h"
 #include "third_party/blink/renderer/platform/wtf/wtf.h"
 
 namespace blink {
 
-WorkletPendingTasks::WorkletPendingTasks(int counter,
+WorkletPendingTasks::WorkletPendingTasks(Worklet* worklet,
                                          ScriptPromiseResolver* resolver)
-    : counter_(counter), resolver_(resolver) {
+    : resolver_(resolver), worklet_(worklet) {
   DCHECK(IsMainThread());
+}
+
+void WorkletPendingTasks::InitializeCounter(int counter) {
+  DCHECK(IsMainThread());
+  counter_ = counter;
 }
 
 void WorkletPendingTasks::Abort() {
@@ -26,6 +32,7 @@ void WorkletPendingTasks::Abort() {
   //     2: "Reject promise with an "AbortError" DOMException."
   if (counter_ != -1) {
     counter_ = -1;
+    worklet_->FinishPendingTasks(this);
     resolver_->Reject(DOMException::Create(kAbortError));
   }
 }
@@ -40,8 +47,14 @@ void WorkletPendingTasks::DecrementCounter() {
   if (counter_ != -1) {
     --counter_;
     if (counter_ == 0)
+      worklet_->FinishPendingTasks(this);
       resolver_->Resolve();
   }
+}
+
+void WorkletPendingTasks::Trace(blink::Visitor* visitor) {
+  visitor->Trace(resolver_);
+  visitor->Trace(worklet_);
 }
 
 }  // namespace blink
