third_party/blink/renderer/core/workers/worklet_pending_tasks.h
@@ -12,6 +12,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace blink {
 
+class Worklet;
+
 // Implementation of the "pending tasks struct":
 // https://drafts.css-houdini.org/worklets/#pending-tasks-struct
 //
@@ -23,7 +25,11 @@ namespace blink {
 class CORE_EXPORT WorkletPendingTasks final
     : public GarbageCollected<WorkletPendingTasks> {
  public:
-  WorkletPendingTasks(int counter, ScriptPromiseResolver*);
+  WorkletPendingTasks(Worklet*, ScriptPromiseResolver*);
+
+  // This must be called after the construction and before decrementing the
+  // counter.
+  void InitializeCounter(int counter);
 
   // Sets |counter_| to -1 and rejects the promise.
   void Abort();
@@ -31,7 +37,7 @@ class CORE_EXPORT WorkletPendingTasks final
   // Decrements |counter_| and resolves the promise if the counter becomes 0.
   void DecrementCounter();
 
-  virtual void Trace(blink::Visitor* visitor) { visitor->Trace(resolver_); }
+  virtual void Trace(blink::Visitor*);
 
  private:
   // The number of pending tasks. -1 indicates these tasks are aborted and
@@ -39,6 +45,8 @@ class CORE_EXPORT WorkletPendingTasks final
   int counter_;
 
   Member<ScriptPromiseResolver> resolver_;
+
+  Member<Worklet> worklet_;
 };
 
 }  // namespace blink
